# synapse

./: .gitignore  Cargo.toml  SYNAPSE.md  clippy.toml  rust-toolchain.toml
crates/synapse/: Cargo.toml
crates/synapse-core/: Cargo.toml
crates/synapse-core/src/: error.rs  lib.rs
crates/synapse-mcp/: Cargo.toml
crates/synapse-mcp/src/: lib.rs
crates/synapse-permissions/: Cargo.toml
crates/synapse-permissions/src/: error.rs  lib.rs
crates/synapse-provider/: Cargo.toml
crates/synapse-provider/src/: error.rs  lib.rs  types.rs
crates/synapse-server/: Cargo.toml
crates/synapse-server/src/: lib.rs
crates/synapse-skills/: Cargo.toml
crates/synapse-skills/src/: lib.rs
crates/synapse-tools/: Cargo.toml
crates/synapse-tools/src/: error.rs  lib.rs
crates/synapse-tui/: Cargo.toml
crates/synapse-tui/src/: lib.rs
crates/synapse/src/: main.rs
docs/: design.md
