[package]
name = "synapse-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Agent core: ReAct loop, context management for Synapse"

[lints]
workspace = true

[dependencies]
synapse-provider = { workspace = true }
synapse-tools = { workspace = true }
synapse-mcp = { workspace = true }
synapse-skills = { workspace = true }
synapse-permissions = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
