[package]
name = "synapse-permissions"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Permission approval engine for Synapse"

[lints]
workspace = true

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
