[package]
name = "synapse-provider"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "LLM Provider trait and implementations for Synapse"

[lints]
workspace = true

[dependencies]
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
