[package]
name = "synapse-server"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "HTTP + WebSocket API server for Synapse (Axum)"

[lints]
workspace = true

[dependencies]
synapse-core = { workspace = true }
anyhow = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
