[package]
name = "synapse-skills"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Skill loading and execution for Synapse"

[lints]
workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
