[package]
name = "synapse-tools"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Tool trait and built-in tools for Synapse"

[lints]
workspace = true

[dependencies]
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
synapse-permissions = { workspace = true }
