[package]
name = "synapse-tui"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "TUI interface for Synapse (Ratatui)"

[lints]
workspace = true

[dependencies]
synapse-core = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
